<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginRight="25dp"
          app:cardCornerRadius="30dp"

        android:layout_centerInParent="true"
        android:layout_height="450dp"
        >
        <ImageView
            android:layout_gravity="right"
            android:id="@+id/cerrarVentana"
            android:layout_width="30dp"
            android:src="@drawable/ic_close_black_24dp"
            android:layout_marginTop="7dp"
            android:layout_marginRight="7dp"
            android:elevation="5dp"

            android:layout_height="30dp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:id="@+id/arriba"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                 android:text="@string/vidio"
                    android:textColor="@android:color/black"
                android:id="@+id/texto"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content">


            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:layout_marginTop="40dp"
                android:id="@+id/Animacion"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/play"
                ></com.airbnb.lottie.LottieAnimationView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:id="@+id/kota2"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="16dp"

                android:textColor="@android:color/black"
                android:text="@string/anuncio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="220dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textAlignment="center"
                />

        </LinearLayout>


        <Button

            android:id="@+id/botonvamo20"
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/colorGreen1"

            android:textStyle="bold"
            android:background="@drawable/btn_redondo"
            android:text="@string/btnvidio"
            android:elevation="40dp"
            android:textColor="@android:color/white" />


    </androidx.cardview.widget.CardView>

</RelativeLayout>