<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:id="@+id/fragment_1"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.PrimerFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_weight="2"
        android:id="@+id/encavbezado"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <android.support.v7.widget.CardView
            android:layout_centerInParent="true"
            android:backgroundTint="#d7d7d7"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_margin="10dp"

                android:autoSizeTextType="uniform"
                android:layout_gravity="center_horizontal"
                android:text="@string/descripcion"
                android:layout_height="match_parent" />

        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <GridLayout
        android:layout_weight="8"
        android:id="@+id/mainGrid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:columnCount="2"

        android:rowCount="2"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:padding="14dp">

        <!--Row1-->
        <android.support.v7.widget.CardView
            android:layout_height="0dp"

            android:layout_columnWeight="1"
            app:cardElevation="8dp"
            android:id="@+id/card1"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_rowWeight="1"
            app:cardCornerRadius="8dp"
            android:layout_width="0dp">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_margin="16dp"

                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_height="wrap_content">


                <ImageButton
                    android:src="@drawable/cube"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:layout_below="@+id/xd"
                    android:id="@+id/btn_mate"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <TextView
                    android:textColor="@android:color/holo_green_dark"
                    android:text="@string/mate"
                    android:textSize="14dp"
                    android:id="@+id/xd"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center"
                    android:textStyle="bold"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <!--Row2-->
        <android.support.v7.widget.CardView
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            app:cardElevation="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:layout_rowWeight="1"
            app:cardCornerRadius="8dp"
            android:layout_width="0dp">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_margin="16dp"

                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_height="wrap_content">


                <ImageButton
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_width="match_parent"
                    android:clickable="true"
                    android:id="@+id/btn_quimica"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:layout_below="@+id/xd2"
                    android:background="@android:color/transparent"
                    android:src="@drawable/atoms"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_height="match_parent" />
                <TextView
                    android:textColor="@android:color/holo_green_dark"
                    android:text="@string/quimi"
                    android:textSize="14dp"
                    android:id="@+id/xd2"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <!--Row3-->
        <android.support.v7.widget.CardView
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            app:cardElevation="8dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_rowWeight="1"
            app:cardCornerRadius="8dp"
            android:layout_width="0dp">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_margin="16dp"

                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_height="wrap_content">


                <ImageButton
                    android:src="@drawable/function"
                    android:clickable="true"
                    android:layout_margin="5dp"
                    android:id="@+id/btn_calculo"
                    android:adjustViewBounds="true"
                    android:layout_below="@id/xd3"
                    android:scaleType="centerInside"
                    android:background="@android:color/transparent"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <TextView
                    android:textColor="@android:color/holo_green_dark"
                    android:text="@string/calcul"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:id="@+id/xd3"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <!--Row4-->
        <android.support.v7.widget.CardView
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            app:cardElevation="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:layout_rowWeight="1"
            app:cardCornerRadius="8dp"
            android:layout_width="0dp">


            <RelativeLayout

                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_margin="16dp"

                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_height="wrap_content">


                <ImageButton
                    android:clickable="true"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:id="@+id/btn_fisica"
                    android:layout_below="@+id/xd4"
                    android:background="@android:color/transparent"
                    android:src="@drawable/gravity"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <TextView
                    android:textColor="@android:color/holo_green_dark"
                    android:text="@string/fisic"

                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:id="@+id/xd4"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </GridLayout>

</LinearLayout>