<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:background="@drawable/gradiente2"
     android:layout_width="match_parent"

    android:weightSum="10"
    android:layout_height="match_parent"
 >
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:background="@color/colorSlide_1"
        android:id="@+id/my_toolbar"
        app:titleTextColor="@android:color/white"
        android:layout_height="?actionBarSize">

    </androidx.appcompat.widget.Toolbar>

    <GridLayout
        android:layout_weight="8"
        android:layout_marginTop="20dp"
        android:id="@+id/mainGrid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:columnCount="2"

        android:rowCount="2"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:padding="14dp">

    <!--Row1-->
    <androidx.cardview.widget.CardView
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        app:cardElevation="8dp"
        android:id="@+id/card1"


        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_rowWeight="1"
        app:cardCornerRadius="8dp"
        android:layout_width="0dp">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp"

            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_height="wrap_content">


            <ImageButton
                android:src="@drawable/suma"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"

                android:layout_below="@+id/xd"
                android:id="@+id/add"

                android:background="@android:color/transparent"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <TextView
                 android:text="@string/suma"
                android:textSize="17dp"
                android:textColor="@android:color/black"

                android:id="@+id/xd"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:textStyle="bold"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <!--Row2-->
    <androidx.cardview.widget.CardView
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        app:cardElevation="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_rowWeight="1"
        android:id="@+id/card2"
        app:cardCornerRadius="8dp"
        android:layout_width="0dp">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp"

            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_height="wrap_content">


            <ImageButton
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_width="match_parent"
                android:clickable="true"
                android:id="@+id/sub"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:layout_below="@+id/xd2"
                android:background="@android:color/transparent"
                android:src="@drawable/resta"
                android:foreground="?attr/selectableItemBackground"
                android:layout_height="match_parent" />
            <TextView
                android:textColor="@android:color/black"
                android:text="@string/resta"
                android:textSize="17dp"
                android:id="@+id/xd2"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <!--Row3-->
    <androidx.cardview.widget.CardView
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        app:cardElevation="8dp"

        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_rowWeight="1"
        app:cardCornerRadius="8dp"
        android:layout_width="0dp">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp"

            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_height="wrap_content">


            <ImageButton
                android:src="@drawable/multiplicac"
                android:clickable="true"
                android:layout_margin="5dp"
                android:id="@+id/mul"
                android:adjustViewBounds="true"
                android:layout_below="@id/xd3"
                android:scaleType="centerInside"
                android:background="@android:color/transparent"
                android:foreground="?attr/selectableItemBackground"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <TextView
                android:textColor="@android:color/black"
                android:text="@string/mul"
                android:textSize="16dp"
                android:textStyle="bold"
                android:id="@+id/xd3"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    </GridLayout>
</LinearLayout>
